# not-vim

./: Cargo.toml
not_vim/: Cargo.toml
not_vim/src/: config.rs
not_vim_terminal/: Cargo.toml
not_vim_terminal/src/: args.rs
src/: args.rs  config.rs  editor.rs  editor_view.rs  lib.rs  main.rs  term_buffer.rs
src/editor/: buffer.rs  mod.rs
src/editor_view/: mod.rs
src/not_vim_term/: editor_view.rs  main.rs
src/not_vim_term/tui/: mod.rs  text.rs
src/tui/: frame.rs  mod.rs  rect.rs  text.rs
