[package]
name = "not-vim"
version = "0.1.0"
edition = "2021"
description = "I'm not sure what this is but it sure isn't vim"
repository = "https://github.com/smsutherland/not-vim"
authors = ["Sagan Sutherland <sagan@farthinghalearms.com>"]
categories = ["editor", "command-line-utilities"]
keywords = ["editor"]

[[bin]]
name = "notvim"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
gag = "1"
anyhow = "1"
bitflags = "2"

[profile.opt]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 3
strip = true
