[dependencies]
crossterm.workspace = true
gag.workspace = true
anyhow.workspace = true
ropey.workspace = true

[package]
name = "not-vim"
version = "0.1.0"
edition = "2021"
description = "I'm not sure what this is but it sure isn't vim"
repository = "https://github.com/smsutherland/not-vim"
authors = ["Sagan Sutherland <sagan@farthinghalearms.com>"]
categories = ["editor", "command-line-utilities"]
keywords = ["editor"]
